--- a/web/_static/index_template.html
+++ b/web/_static/index_template.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Movie Collection</title> <link rel="stylesheet" href="style.css">
+    <title>My movies Database</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>__TEMPLATE_TITLE__</h1></header>
+        <h1>__TEMPLATE_TITLE__</h1>
+    </header>
     <main>
         <div class="movie-grid">
             __TEMPLATE_MOVIE_GRID__
